# RottenFish

./: CMakeLists.txt  README.md  example.cpp  install_vendors.sh  main.cpp
Extensions/PHP/Vendors/: install_vendors.sh
RottenFish/: RottenFish.h  XorShiftMarsagliaBitsReserve.cpp  XorShiftMarsagliaBitsReserve.h  new_experiences.cpp  new_experiences.h
Src/: Log2.cpp  Log2.h  RawSamplingReference.cpp  RottenFish.cpp  RottenFish.h  XorShiftMarsagliaBitsReserve.h
Tests/: CMakeLists.txt
Tests/BasicTests/: CMakeLists.txt  loading_check.cpp  log2_check.cpp  random_check.cpp  rottenfish_test.cpp
Tests/Lib2/googletest/googlemock/test/: gmock_test_utils.py
Tests/Tests/: CMakeLists.txt  all_tests.cpp  loading_check.cpp  log2_check.cpp  random_check.cpp  rottenfish_check.cpp
Tests/Vendors/: install_vendors.sh
Tests/Vendors/googletest/googlemock/test/: gmock_test_utils.py
